--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 
     <title>GrabGetGo - Turning your concept into creation</title>
     <meta name="description" content="Turning your concept into creation">
-    <meta name="image" content="https://grabgetgo.com/img/favicon.ico">
+    <meta name="image" content="assets/img/favicon.ico">
     
     <meta itemprop="name" content="GrabGetGo">
     <meta itemprop="description" content="Turning your concept into creation">
-    <meta itemprop="image" content="https://grabgetgo.com/img/favicon.ico">
+    <meta itemprop="image" content="assets/img/favicon.ico">
     
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="GrabGetGo">
