new project details

--- a/index.html
+++ b/index.html
@@ -1101,12 +1101,12 @@
                                     We've worked with the big boys
                                 </h3>
                             </div>
-                            <div class="col-4 col-md-2 p-3"><img class="img-fluid" src="img/logo_cocacola.png" alt="Cocacola project"></div>
-                            <div class="col-4 col-md-2 p-3"><img class="img-fluid" src="img/logo_reebok.png" alt="Reebok project"></div>
-                            <div class="col-4 col-md-2 p-3"><img class="img-fluid" src="img/logo_hurbal.png" alt="Herbal Life"></div>
-                            <div class="col-4 col-md-2 p-3"><img class="img-fluid" src="img/logo_adidas.png" alt="Adidas"></div>
-                            <div class="col-4 col-md-2 p-3"><img class="img-fluid" src="img/logo_ripley.png" alt="Ripley"></div>
-                            <div class="col-4 col-md-2 p-3"><img class="img-fluid" src="img/logo_laureate.png" alt="Laureate"></div>
+                            <div class="col-4 col-md-2 p-3"><img class="img-fluid" src="assets/img/logo_cocacola.png" alt="Cocacola project"></div>
+                            <div class="col-4 col-md-2 p-3"><img class="img-fluid" src="assets/img/logo_reebok.png" alt="Reebok project"></div>
+                            <div class="col-4 col-md-2 p-3"><img class="img-fluid" src="assets/img/logo_hurbal.png" alt="Herbal Life"></div>
+                            <div class="col-4 col-md-2 p-3"><img class="img-fluid" src="assets/img/logo_adidas.png" alt="Adidas"></div>
+                            <div class="col-4 col-md-2 p-3"><img class="img-fluid" src="assets/img/logo_ripley.png" alt="Ripley"></div>
+                            <div class="col-4 col-md-2 p-3"><img class="img-fluid" src="assets/img/logo_laureate.png" alt="Laureate"></div>
                             <div class="clearfix"></div>
                         </div>
                     </div>
