new project details

--- a/index.html
+++ b/index.html
@@ -1402,7 +1402,7 @@
     <footer class="footer-social-icon text-center section_padding_50 clearfix">
         <!-- footer logo -->
         <div class="footer-text">
-            <img class="img-fluid" src="img/logo.svg"> 
+            <img class="img-fluid" src="assets/img/logo.svg"> 
             <p>GrabGetGo</p>
         </div>
         
