--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta name="description" content="Something"/>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/meta/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/meta/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/meta/favicon-16x16.png">
+    <link rel="manifest" href="%PUBLIC_URL%/meta/manifest.json">
+
     <title>f7man</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -18,8 +18,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
     <link href="/assets/css/animate.css" rel="stylesheet">
-    <link href="/assets/css/magnific-popup.css" rel="stylesheet">
-    <link href="/assets/css/owl.carousel.min.css" rel="stylesheet">
     <link href="/assets/css/ionicons.min.css" rel="stylesheet">
     <link href="/assets/css/themify-icons.css" rel="stylesheet">
     <link href="/assets/css/responsive.css" rel="stylesheet">
