--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/meta/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/meta/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/meta/favicon-16x16.png">
-    <link rel="manifest" href="%PUBLIC_URL%/meta/manifest.json">
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 
     <title>f7man</title>
 
@@ -17,11 +17,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat|Raleway:400,500,700">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
-    <link href="/assets/css/animate.css" rel="stylesheet">
-    <link href="/assets/css/ionicons.min.css" rel="stylesheet">
-    <link href="/assets/css/themify-icons.css" rel="stylesheet">
-    <link href="/assets/css/responsive.css" rel="stylesheet">
-    <link href="/assets/css/ggg-menu.css" rel="stylesheet">
     <link href="/assets/css/style.css" rel="stylesheet">
   </head>
   <body>
@@ -30,8 +25,5 @@
     <script src="/assets/js/jquery-2.2.4.min.js"></script>
     <script src="/assets/js/popper.min.js"></script>
     <script src="/assets/js/bootstrap.min.js"></script>
-    <script src="/assets/js/plugins.js"></script>
-    <script src="/assets/js/jquery.easing.1.3.js"></script>
-    <script src="/assets/js/jquery.parallax-scroll.js"></script>
   </body>
 </html>
